objects/CSS_PSN__c.object
<CustomObject>
    <description>To handle multiple ESN scenarios with respect to Claims</description>
    <fields>
        <fullName>AccessCode__c</fullName>
        <label>AccessCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationCode__c</fullName>
        <label>ApplicationCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Before_In_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Before In Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS_Claims__c</fullName>
        <label>CSS Claims</label>
        <referenceTo>CSS_Claims__c</referenceTo>
        <relationshipLabel>CSS PSNs</relationshipLabel>
        <relationshipName>CSS_PSNs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Calibration_After__c</fullName>
        <label>Calibration After</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calibration_Before__c</fullName>
        <label>Calibration Before</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoverageFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CoverageFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Equipment_ID__c</fullName>
        <label>Equipment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failure_Date__c</fullName>
        <label>Failure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Failure_Point__c</fullName>
        <label>Failure Point</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <label>Justification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>----Select One----</fullName>
                    <default>true</default>
                    <label>----Select One----</label>
                </value>
                <value>
                    <fullName>Broken Revision</fullName>
                </value>
                <value>
                    <fullName>CFSE Direction</fullName>
                </value>
                <value>
                    <fullName>ECM Replacement</fullName>
                </value>
                <value>
                    <fullName>Field Action</fullName>
                </value>
                <value>
                    <fullName>Latched Fault Code</fullName>
                </value>
                <value>
                    <fullName>Symptom Correction</fullName>
                </value>
                <value>
                    <fullName>TSB Requirement</fullName>
                </value>
                <value>
                    <fullName>Tier 2 Direction</fullName>
                </value>
                <value>
                    <fullName>Select One</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Plate_State__c</fullName>
        <label>License Plate State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AB - Alberta</fullName>
                </value>
                <value>
                    <fullName>AK - Alaska</fullName>
                </value>
                <value>
                    <fullName>AL - Alabama</fullName>
                </value>
                <value>
                    <fullName>AR - Arkansas</fullName>
                </value>
                <value>
                    <fullName>AZ - Arizona</fullName>
                </value>
                <value>
                    <fullName>BC - British Columbia</fullName>
                </value>
                <value>
                    <fullName>CA - California</fullName>
                </value>
                <value>
                    <fullName>CO - Colorado</fullName>
                </value>
                <value>
                    <fullName>CT - Connecticut</fullName>
                </value>
                <value>
                    <fullName>DC - District Of Columbia</fullName>
                </value>
                <value>
                    <fullName>DE - Delaware</fullName>
                </value>
                <value>
                    <fullName>FL - Florida</fullName>
                </value>
                <value>
                    <fullName>GA - Georgia</fullName>
                </value>
                <value>
                    <fullName>GT - Government</fullName>
                </value>
                <value>
                    <fullName>HI - Hawaii</fullName>
                </value>
                <value>
                    <fullName>IA - Iowa</fullName>
                </value>
                <value>
                    <fullName>ID - Idaho</fullName>
                </value>
                <value>
                    <fullName>IL - Illinois</fullName>
                </value>
                <value>
                    <fullName>IN - Indiana</fullName>
                </value>
                <value>
                    <fullName>KS - Kansas</fullName>
                </value>
                <value>
                    <fullName>KY - Kentucky</fullName>
                </value>
                <value>
                    <fullName>LA - Louisiana</fullName>
                </value>
                <value>
                    <fullName>MA - Massachusetts</fullName>
                </value>
                <value>
                    <fullName>MB - Manitoba</fullName>
                </value>
                <value>
                    <fullName>MD - Maryland</fullName>
                </value>
                <value>
                    <fullName>ME - Maine</fullName>
                </value>
                <value>
                    <fullName>MI - Michigan</fullName>
                </value>
                <value>
                    <fullName>MN - Minnesota</fullName>
                </value>
                <value>
                    <fullName>MO - Missouri</fullName>
                </value>
                <value>
                    <fullName>MS - Mississippi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Certification__c</fullName>
        <description>Stores the status of the certification from accreditation of particular account location</description>
        <label>Location Certification</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mileage_Measure__c</fullName>
        <label>Mileage Measure</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <label>Mileage</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mission_Disabling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mission Disabling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multi_PSN_Claim__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Multi PSN Claim for manual claim</description>
        <label>Multi - PSN Claim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PACCAR_Flag__c</fullName>
        <label>PACCAR Flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSN__c</fullName>
        <label>PSN</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductAppcodeErrorflag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProductAppcodeErrorflag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Hours__c</fullName>
        <label>Product Hours</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qsol_Engine_Family_Code__c</fullName>
        <label>Qsol Engine Family Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qsol_Technical_Config__c</fullName>
        <label>Qsol Technical Config</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qsol_Warranty_Start__c</fullName>
        <label>Qsol Warranty Start</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision_After__c</fullName>
        <label>Revision After</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision_Before__c</fullName>
        <label>Revision Before</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Model__c</fullName>
        <label>Service Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Claim_No__c</fullName>
        <formula>CSS_Claims__r.SiebelClaimNumber__c</formula>
        <label>Siebel Claim No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Number__c</fullName>
        <label>Unit Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <description>Equipment Configuration from BMS side</description>
        <label>Unit Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <label>VIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Message__c</fullName>
        <label>Validation Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Warranty_Authorization_Flag__c</fullName>
        <label>Warranty Authorization Flag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Start_Date__c</fullName>
        <label>Warranty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>isNonValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isNonValidated</label>
        <type>Checkbox</type>
    </fields>
    <label>CSS PSN</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS PSNs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>